manually removed all empty string lines from l10n files

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,5 +1,5 @@
 ---
-ru:
+en:
   link:                                         "Ссылка"
   site search:                                  "Поиск YouVersion"
   auth error:                                   "Извините, с именем пользователя и паролем произошла ошибка. Пожалуйста, войдите в систему, чтобы продолжить."
@@ -126,9 +126,9 @@ ru:
     like button text:                           "Нравится"
     unlike button text:                         "Не нравится"
   notes:
-    public:                                     ""
-    private:                                    ""
-    draft:                                      ""
+    public:                                     "Публичная"
+    private:                                    "Личная"
+    draft:                                      "Черновик"
     creation form errors:                       "Вы не смогли создать заметку, по следующим причинам:"
     status field:                               "Status:"
     reference field:                            "Ссылки:"
@@ -173,7 +173,7 @@ ru:
     select another chapter:                     "Выбрать другую главу"
     view in reader:                             "Открыть %{reference} в окне чтения"
   users:
-    settings:                                   ""
+    settings:                                   "Настройки"
     no connection friends:                      "Ваших друзей по %{connection} пока нет на YouVersion."
     creation form errors:                       "Ваш аккаунт не был создан по следующим причинам:"
     profile form errors:                        "Ваш профиль не был обновлён по следующим причинам:"
@@ -193,7 +193,7 @@ ru:
     following title:                            "Мои друзья"
     user does not follow you:                   "%{user} не добавил Вас в друзья."
     recent activity:                            "Последние действия"
-    my recent_activity:                         ""
+    my recent_activity:                         "Последние действия"
     started following:                          "Добавили в друзья:"
     subscribed to plan:                         "Пользователи, подписанные на %{plan}"
     reading:                                    "Пользователи, читающие по этому плану"    
@@ -219,10 +219,10 @@ ru:
     user bookmarks:                             "Закладки %{user}"
     my likes:                                   "Понравившееся мне"
     user likes:                                 "Понравившееся %{user}"
-    my badges:                                  ""
+    my badges:                                  "Мои значки"
     revised date:                               "Последний раз редактировалось %{date}"
     update email copy:                          "Введите новый адрес электронной почты и нажмите Обновить Email. Мы вышлем Вам письмо со ссылкой для подтверждения нового адреса электронной почты."
-    edit email:                                 ""
+    edit email:                                 "Изменить емейл"
     update email check:                         "Пожалуйста, проверьте email и перейдите по ссылке, чтобы подтвердить Ваш новый адрес."
     confirm update email success:               "Спасибо! Вы обновили свой адрес email."
     confirm update email error:                 "Извините, при обновлении адреса email возникла ошибка."
@@ -354,11 +354,11 @@ ru:
       reading_plans:                            "Уведомлять меня о начатых мною планах чтения."
       update:                                   "Сохранить"
   bookmarks:
-    edit:                                       ""
-    delete:                                     ""
+    edit:                                       "Редактировать"
+    delete:                                     "Удалить эту закладку"
     title field:                                "Название"
     lables:                                     "Ярлыки"
-    all:                                        ""
+    all:                                        "Все"
     labels label:                               "Ярлыки:"
     title:                                      "Закладки"
     not found:                                  "Закладки позволят Вам быстро переходить к понравившимся отрывкам или к последней прочитанной главе в отдельно взятой книге. Чтобы добавить закладку, выберите стих в Окне чтения и нажмите на кнопку \"Выбранное\"."
@@ -462,7 +462,7 @@ ru:
     which day in plan:                          "День %{day} из %{total}"
     must start to complete:                     "Начните план, чтобы сохранить свой прогресс!"
   registration:
-    with facebook:                              ""
+    with facebook:                              "Зарегистрироваться через Facebook"
     benefits title:                             "Получите доступ ко всем функциям!"
     benefits blurb:                             "Аккаунт YouVersion даст Вам доступ к таким замечательным функциям, как, например, заметки и закладки. Они будут отображаться на любом устройстве, если Вы войдёте под своей учётной записью. Аккаунт также позволяет легче делиться Библией с друзьями, а регистрация занимает всего минуту!"
     plan blurb:                                 "Возможно, Вы хотите начать план чтения? Великолепно! Планы помогут сделать Библию частью Вашей ежедневной жизни! Войдите в систему или создайте новый аккаунт ниже и начинайте!"
@@ -573,22 +573,22 @@ ru:
     amazon:                                     "Kindle Fire"
   pages:
     generic_error:
-      title:                                    ""
-      explanation:                              ""
-      our action:                               ""
+      title:                                    "Ой-ой-ой!"
+      explanation:                              "Что-то пошло не так на сервере! Попробуйте обновить страницу и примите наши извинения за доставленные неудобства!"
+      our action:                               "Мы получили уведомление об этой ошибке и займёмся её решением как можно скорее."
   shared:
     menu_settings:
-        title:                                  ""
-        close:                                  ""
-        font:                                   ""
-        font1:                                  ""
-        font2:                                  ""
-        font3:                                  ""
-        font4:                                  ""
-        font size:                              ""
-        small:                                  ""
-        medium:                                 ""
-        large:                                  ""
-        highlights:                             ""
-        on:                                     ""
-        off:                                    ""
+        title:                                  "Ваши настройки"
+        close:                                  "Закрыть"
+        font:                                   "Шрифт:"
+        font1:                                  "Helvetica"
+        font2:                                  "Georgia"
+        font3:                                  "Baskerville"
+        font4:                                  "Verdana"
+        font size:                              "Размер шрифта:"
+        small:                                  "Маленький"
+        medium:                                 "Средний"
+        large:                                  "Большой"
+        highlights:                             "Выделение цветом:"
+        on:                                     "Вкл"
+        off:                                    "Выкл"
