fixing 'support' key name with rails-i18n

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -84,7 +84,7 @@ en:
   privacy policy:                               "Privacy Policy"
   terms:                                        "Terms"
   press:                                        "Press"
-  support:                                      "Support"
+  get support:                                  "Support"
   donate title:                                 "Donate"
   choose language field:                        "Choose Your Language:"
   settings:                                     "Settings"
