--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -84,7 +84,7 @@ fr:
   privacy policy:                               "Politique de confidentialité"
   terms:                                        "Conditions"
   press:                                        "Presse"
-  support:                                      "Support"
+  get support:                                  "Support"
   donate title:                                 "Faire un don"
   choose language field:                        "Choisir la langue :"
   settings:                                     "Paramètres"
