--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -84,7 +84,7 @@ ja:
   privacy policy:                               "プライバシー規約"
   terms:                                        "規約"
   press:                                        "プレス"
-  support:                                      "サポート"
+  get support:                                  "サポート"
   donate title:                                 "寄付"
   choose language field:                        "使用言語を選択"
   settings:                                     "設定"
