--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -84,7 +84,7 @@ ko:
   privacy policy:                               "개인정보취급정책"
   terms:                                        "약관"
   press:                                        "기사"
-  support:                                      "지원"
+  get support:                                  "지원"
   donate title:                                 "후원"
   choose language field:                        "언어선택:"
   settings:                                     "설정"
