--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -84,7 +84,7 @@ nl:
   privacy policy:                               "Privacy Policy"
   terms:                                        "Voorwaarden"
   press:                                        "Pers"
-  support:                                      "Ondersteuning"
+  get support:                                  "Ondersteuning"
   donate title:                                 "Bijdragen"
   choose language field:                        "Kies je taal:"
   settings:                                     "Instellingen"
