--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -84,7 +84,7 @@
   privacy policy:                               "Personverninstillinger"
   terms:                                        "Vilkår"
   press:                                        "Presse"
-  support:                                      "Støtte"
+  get support:                                  "Støtte"
   donate title:                                 "Gi"
   choose language field:                        "Velg språk:"
   settings:                                     "Innstillinger"
