--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -84,7 +84,7 @@ pl:
   privacy policy:                               "Polityka prywatności"
   terms:                                        "Regulamin"
   press:                                        "Prasa"
-  support:                                      "Wsparcie"
+  get support:                                  "Wsparcie"
   donate title:                                 "Dotacja"
   choose language field:                        "Wybierz swój język:"
   settings:                                     "Ustawienia"
