--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -84,7 +84,7 @@ pt-BR:
   privacy policy:                               "Política de Privacidade"
   terms:                                        "Termos"
   press:                                        "Imprensa"
-  support:                                      "Suporte"
+  get support:                                  "Suporte"
   donate title:                                 "Doar"
   choose language field:                        "Escolha seu Idioma:"
   settings:                                     "Configurações"
