--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -84,7 +84,7 @@ sv:
   privacy policy:                               "Integritetspolicy"
   terms:                                        "Villkor"
   press:                                        "Press"
-  support:                                      "Support"
+  get support:                                  "Support"
   donate title:                                 "Donera"
   choose language field:                        "Välj ditt språk:"
   settings:                                     "Inställningar"
