--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -84,7 +84,7 @@ ru:
   privacy policy:                               "Политика конфиденциальности"
   terms:                                        "Условия"
   press:                                        "Уголок прессы"
-  get support:                                  "Служба поддержки"
+  support:                                      "Служба поддержки"
   donate title:                                 "Сделать пожертвование"
   choose language field:                        "Выберите язык:"
   settings:                                     "Настройки"
